# marlow-compositor

./: CLAUDE.md  Cargo.toml  bash_profile_snippet.sh  getty-autologin-tty3.conf  marlow-agent.service  marlow-compositor.service  marlow-voice.service  start-marlow-os.sh  test_dual_seat.py  test_input.py  test_ipc.py  test_kms.sh  test_shadow_mode.py
config/: wofi-config  wofi-style.css
config/waybar/: config.jsonc  marlow-status.sh  style.css
marlow-compositor/: Cargo.toml
marlow-compositor/src/: cursor.rs  main.rs  state.rs
marlow-compositor/src/backend/: kms.rs  mod.rs  winit.rs
marlow-compositor/src/input/: mod.rs
marlow-compositor/src/input/grabs/: move_grab.rs
marlow-compositor/src/ipc/: mod.rs
marlow-compositor/src/seat/: arbiter.rs  mod.rs
marlow-compositor/src/shell/: mod.rs
marlow-compositor/src/wayland/: mod.rs
marlow-ipc/: Cargo.toml
marlow-ipc/src/: lib.rs
session/: install.sh  marlow-daemon.service  marlow-mako.service  marlow-polkit.service  marlow-power-menu  marlow-session.target  marlow-sidebar.service  marlow-swaybg.service  marlow-voice.service  marlow-waybar.service  marlow.desktop  start-marlow
session/systemd/: marlow-idle.service  marlow-polkit.service  marlow-session.target
src/: main.rs  state.rs
src/input/grabs/: move_grab.rs  resize_grab.rs
src/shell/: mod.rs
src/wayland/: mod.rs
