[package]
name = "marlow-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay", features = [
    "wayland_frontend",
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_udev",
    "backend_libinput",
    "backend_session_libseat",
    "renderer_gl",
    "desktop",
] }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay" }
calloop = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitflags = "2"
xkbcommon = { version = "0.8", features = ["wayland"] }
marlow-ipc = { path = "../marlow-ipc" }
serde_json = "1"
rmp-serde = "1"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
drm-fourcc = "2.2"
drm = "0.14"
xcursor = "0.3"
